Maquetacion vista pagina inicio css

--- a/pagina-inicio.html
+++ b/pagina-inicio.html
@@ -23,6 +23,62 @@
       margin: 0;
       font-family: 'Quicksand', sans-serif;
     }
+
+    .cards-container{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 240px);
+        gap: 26px;
+        place-content: center;
+    }
+    .product-card{
+        width: 240px;
+    }
+    .product-card img{
+        width: 240px;
+        height: 240px;
+        border-radius: 20px;
+        object-fit: cover;
+    }
+    .product-info{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 12px;
+    }
+    .product-info figure{
+        margin: 0;
+    }
+    .product-info figure img{
+        width: 35px;
+        height: 35px;
+    }
+
+    .product-info div p:nth-child(1){
+        font-weight: bold;
+        font-size: var(--md);
+        margin-top: 0;
+        margin-bottom: 4px;
+    }
+    .product-info div p:nth-child(2){
+        font-size: var(--sm);
+        margin-top: 0;
+        margin-bottom: 0;
+        color: var(--very-light-pink);
+    }
+    @media(max-width: 640px){
+        .cards-container{
+        grid-template-columns: repeat(auto-fill, 140px);
+        gap: 26px;
+    }
+
+    .product-card{
+        width: 140px;
+    }
+    .product-card img{
+        width: 140px;
+        height: 140px;
+    }
+    }
   </style>
 <body>
     <section class="main-container">
@@ -30,6 +86,7 @@
             
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -37,10 +94,25 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
+            </div>
+            
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
+                <div>
+                    <p>$120.00</p>
+                    <p>Bike</p>
+                </div>
+                <figure>
+                    <img src="./icons/bt_add_to_cart.svg" alt="">
+                </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -48,10 +120,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -59,10 +133,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -70,10 +146,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -81,10 +159,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -92,10 +172,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -103,10 +185,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -114,10 +198,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -125,10 +211,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -136,10 +224,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -147,10 +237,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -158,10 +250,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -169,10 +263,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -180,10 +276,12 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
+                </div>
             </div>
 
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <div class="product-info">
                 <div>
                     <p>$120.00</p>
                     <p>Bike</p>
@@ -191,83 +289,7 @@
                 <figure>
                     <img src="./icons/bt_add_to_cart.svg" alt="">
                 </figure>
-            </div>
-
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                <div>
-                    <p>$120.00</p>
-                    <p>Bike</p>
                 </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                <div>
-                    <p>$120.00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                <div>
-                    <p>$120.00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                <div>
-                    <p>$120.00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                <div>
-                    <p>$120.00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                <div>
-                    <p>$120.00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                <div>
-                    <p>$120.00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
     </section>
